--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,1 +1,58 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
+.container {
+    max-width: 100% !important;
+    /* display: grid; */
+    grid-template-areas: 'header header header' 'content content content' 'footer footer footer';
+    grid-template-columns: 1fr 1fr 1fr;
+    position: relative;
+    min-height: 100vh;
+}
+
+.wrapforfooter {
+    padding-bottom: 2.5rem;
+}
+
+.item1 {
+    grid-area: header;
+}
+
+.item2 {
+    grid-area: content;
+    padding-bottom: 2.5rem;
+}
+
+.leftbar {
+    display: grid;
+    grid-template-columns: 1fr;
+    min-width: 20vw;
+    float: left;
+}
+
+.leftmenu {
+    min-width: 360px;
+}
+
+.content {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    justify-items: center;
+    grid-gap: 10px;
+}
+
+.contdiv {
+    width: 200px;
+    height: 300px;
+    position: relative;
+    cursor: pointer;
+}
+
+.item3 {
+    grid-area: footer;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;
+}
